# directory-hash-rust

./: Cargo.toml  Makefile
src/: hash.rs  lib.rs  main.rs  read_all.rs  read_dir.rs
